--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,14 @@
 # required metdata
-sonar.projectKey=<preferrable_node_app_name>
-sonar.projectVersion=<version>
-sonar.sourceEncoding=<source code encoding>
-
-# path to srouce directories
+sonar.projectKey=nodejs-app
+sonar.projectName=nodejs-app
+sonar.projectVersion=1.0.0
+sonar.sourceEncoding=.
+sonar.sourceEncoding=UTF-8
+sonar.host.url=http://192.169.10.12:9000
+sonar.login=sqa_9bea08f8d15388c978ae09ed8741ad29d664d854
 sonar.sources=<your_node_app_folder_name>
 
-# excludes
 sonar.exclusions=<files or folder which you want to exclude>
-
-# coverage reporting
 sonar.javascript.lcov.reportPaths=<code coverage location>
+
+
