--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,10 @@ sonar.sourceEncoding=.
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://192.169.10.12:9000
 sonar.login=sqa_9bea08f8d15388c978ae09ed8741ad29d664d854
-sonar.sources=<your_node_app_folder_name>
+sonar.sources=./
 
-sonar.exclusions=<files or folder which you want to exclude>
-sonar.javascript.lcov.reportPaths=<code coverage location>
+sonar.exclusions=**/javascripts/dist/*.js,**/javascripts/vendor/*.js,**/stylesheets/*.css
+sonar.profile=node
+sonar.tests=spec/node
 
 
